# obit_transcriber

./: .gitignore  README.md  __init__.py  autocorrection.py  cli.py  config.py  obit_downloader.py  obit_reader.py  obit_scanner.py  obit_transcriber.py  preprocessing.py  pyproject.toml  requirements.txt  valid_words.txt
src/: autocorrection.py  config.py  database.py  downloader.py  logger.py  obit_downloader.py  obit_transcriber.py  preprocessing.py  textnormalizer.py  transcriber.py
test/: test_downloader.py  test_preprocessing.py  test_transcriber.py
tests/: test_autocorrection.py  test_downloader.py  test_preprocessing.py  test_transcriber.py
