[tool.poetry]
name = "obituary-reader"
version = "0.3.1"
description = "A module to download and transcribe obituaries from the Bay Area Reporter archives."
authors = ["John Fallot <john.fallot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spellchecker = "^0.4"
playwright = "^1.51.0"
pytesseract = "^0.3.13"
numpy = "^2.2.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
black = "^25.1.0"


[tool.black]
line-length = 88
target-version = ['py312'] # Matching your Python version
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true


[[tool.mypy.overrides]]
module = "tests.*"            # Less strict typing for tests
disallow_untyped_defs = false
