[tool.poetry]
name = "obituary_reader"
version = "1.0.0"
description = "A module to download and transcribe obituaries from the Bay Area Reporter archives."
authors = ["John Fallot <john.fallot@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
spellchecker = "^0.4"
playwright = "^1.51.0"
pytesseract = "^0.3.13"
numpy = "^2.2.5"
tqdm = "^4.67.1"
requests = "^2.31.0"  # Added requests dependency
opencv-python = "^4.8.0"  # Added OpenCV for image processing
pillow = "^10.0.0"  # Added Pillow for image handling
pyspellchecker = "^0.8.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
black = "^25.1.0"

[tool.poetry.scripts]
obituary_reader = "cli:main"

[tool.black]
line-length = 88
target-version = ['py312'] # Matching your Python version
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = false
check = true
fast = false

[tool.isort]
profile = "black"
line_length = 88
known_third_party = ["playwright", "pytesseract", "numpy", "tqdm", "requests", "opencv-python", "pillow", "pyspellchecker", "pandas"]
skip = ["__init__.py"]
default_section = "THIRDPARTY"
known_first_party = ["obituary_reader"]
force_sort_within_sections = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true


[[tool.mypy.overrides]]
module = "tests/*"            # Less strict typing for tests
disallow_untyped_defs = false
